--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     />
   </head>
   <body>
-    <img src="/images/8.jpg" alt="" class="image">
+    <img src="images/8.jpg" alt="" class="image">
     <div class="container">
       <div class="change-color">
         <div class="changeC" data-color="#ffffff8f" data-text="#000000" data-bg="#b9b9b9"></div>
