--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
     />
   </head>
   <body>
-    <img src="images/8.jpg" alt="" class="image">
+    <img src="images/8.jpg" alt="" class="image" />
     <div class="container">
       <div class="change-color">
-        <div class="changeC" data-color="#ffffff8f" data-text="#000000" data-bg="#b9b9b9"></div>
-        <div class="changeC" data-color="#72b5f78f" data-text="#000000" data-bg="#4074a8"></div>
-        <div class="changeC" data-color="#2e2e5e8f" data-text="#ffffff" data-bg="#222246"></div>
-        <div class="changeC" data-color="#3d3d3d8f" data-text="#ffffff" data-bg="#222222"></div>
-        <div class="changeC" data-color="#ffffff00" data-text="#ffffff" data-bg="#222222"></div>
+        <div class="changeC" data-color="#ffffff8f" data-text="#000000"></div>
+        <div class="changeC" data-color="#72b5f78f" data-text="#000000"></div>
+        <div class="changeC" data-color="#2e2e5e8f" data-text="#ffffff"></div>
+        <div class="changeC" data-color="#3d3d3d8f" data-text="#ffffff"></div>
+        <div class="changeC" data-color="#ffffff00" data-text="#ffffff"></div>
       </div>
       <header>
         <i class="fa-solid fa-euro-sign"></i>urrency Converter
