--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
     />
   </head>
   <body>
-    <img src="images/8.jpg" alt="" class="image" />
     <div class="container">
       <div class="change-color">
         <div class="changeC" data-color="#ffffff8f" data-text="#000000"></div>
@@ -55,6 +54,7 @@
       <hr class="line" />
       <footer>
         <p class="copy">© mina said george</p>
+        <a href="mailto:white_lion_mina@yahoo.com">💌</a>
         <p class="date"></p>
       </footer>
     </div>
